[package]
name = "rust-crud-api"
version = "0.1.0"
authors = ["matiasbn <matias.barriosn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_codegen = "0.4.6"
serde = { version = "1.0.117", features = ["derive"] }

serde_derive = "1.0.117"
serde_json = "1.0.59"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]